--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
                 <article></article>
                 <article>
                     <hr>
-                    <img src="../assets/images/logos/Logo_Nemateria_2021_cube.png">
+                    <img [src]="dataServ.data.accueil.logo_petit">
                     <hr>
                 </article>
             </header>
