--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -4,6 +4,9 @@
     </article>
 </header>
 <section>
+    <header [style.backgroundImage]="'url('+dataServ.data.presentation.entete+')'">
+
+    </header>
     <article>
 
     </article>
