--- a/src/app/projets/projets.component.html
+++ b/src/app/projets/projets.component.html
@@ -2,7 +2,22 @@
     <img src="../../assets/images/logos/Logo_Nemateria_2021.png">
 </header>
 <section>
-
+    <div>
+        <h2>{{ dataServ.data.projets.titre }}</h2>
+        <h3 [innerHTML]="dataServ.data.projets.soustitre"></h3>
+        <article [innerHTML]="dataServ.data.projets.intro">
+            <!-- {{ dataServ.data.projets.intro }} -->
+        </article>
+        <hr>
+        <article>
+            <ul>
+                <li *ngFor="let p of dataServ.data.projets.projets">
+                    <a [href]="p.lien" [title]="p.titre" target="_blank">{{ p.titre }}</a>
+                    <blockquote>{{ p.infos }}</blockquote>
+                </li>
+            </ul>
+        </article>
+    </div>
 </section>
 <footer class="noir">
     <article></article>
