--- a/src/app/projets/projets.component.html
+++ b/src/app/projets/projets.component.html
@@ -20,5 +20,10 @@
     </div>
 </section>
 <footer class="noir">
-    <article></article>
+    <article>
+        <p>
+            Pour tous renseignements ou prestations :
+        </p>
+        <p><a [href]="'mailto:'+dataServ.email">| contact[at]exlineo.com</a> <br/>| (+33) 6 17 18 13 91</p>
+    </article>
 </footer>
