--- a/App/css/main.css
+++ b/App/css/main.css
@@ -7,7 +7,6 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: 'Raleway', sans-serif;
     font-variation-settings: 'wght' 500;
     font-weight: 500;
     width: 100vw;
@@ -19,6 +18,7 @@ body {
 body {
     display: flex;
     flex-flow: row nowrap;
+    font-family: 'Economica', sans-serif;
 }
 
 body>* {
@@ -27,7 +27,6 @@ body>* {
     display: flex;
     height: 100vh;
     border-right: dashed black 1px;
-    font-family: 'Economica', sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -79,14 +78,6 @@ body>main>section {
     background-color: white;
 }
 
-body>main>section:nth-child(1) {
-    width: 65%;
-}
-
-body>main>section:nth-child(2) {
-    width: 35%;
-}
-
 a {
     color: red;
     text-decoration: none;
@@ -96,6 +87,11 @@ a {
 
 
 /* NAVIGATION PRINCIPALE */
+
+nav {
+    width: 100%;
+    height: 40%;
+}
 
 nav>ul>li {
     list-style: none;
@@ -122,17 +118,39 @@ nav a {
     margin: 10px;
 }
 
+section>header {
+    min-height: 60px;
+}
+
+i {
+    float: right;
+    margin: 20px;
+    cursor: pointer;
+}
+
 
 /* NOTICES */
 
 .notices {
     flex-flow: column nowrap;
-    overflow-y: auto;
+    width: 100%;
+}
+
+.notices>header {
+    background-color: black;
+    color: #fff;
+}
+
+.notices>header>h1 {
+    display: block;
+    margin: 0;
+    padding: 20px 0 10px;
 }
 
 .notices>section {
     display: flex;
     flex-flow: row wrap;
+    overflow-y: auto;
 }
 
 .notices>section>article {
@@ -174,12 +192,6 @@ nav a {
     transition: opacity .3s ease;
 }
 
-.notices a>span>img {
-    width: 24px;
-    height: 24px;
-    margin: auto;
-}
-
 .notices a:hover>span {
     opacity: 1;
 }
@@ -197,48 +209,132 @@ nav a {
 
 /* COLLECTIONS */
 
-
-/* MEDIA QUERIES */
-
-@media screen and (max-width: 999px) {
-    .notices>section>article {
-        width: 100%;
-    }
+.collection {
+    border-right: dashed black 1px;
 }
 
-@media screen and (min-width: 1000px) and (max-width: 1400px) {
-    .notices>section>article {
-        width: 50%;
-    }
+.collection>header {
+    background-color: yellow;
+    margin-bottom: 30px;
 }
 
-@media screen and (min-width: 1401px) {
-    .notices>section>article {
-        width: 33.33%;
-    }
+.collection>header>h1 {
+    display: block;
+    margin: 0;
+    padding: 20px 0 10px;
+}
+
+.collection>section {
+    padding: 10px 30px;
 }
 
 
 /* DIVERS */
 
-::-webkit-scrollbar-button {
-    /* Boutons */
-    height: 26px;
-    background: yellow 1px 50% no-repeat, #bfb6a3 0 0 no-repeat;
+.icone {
+    width: 24px;
+    height: 24px;
+    margin: auto;
+    transition: transform .3s ease;
 }
 
-::-webkit-scrollbar-button:increment {
-    /* Bouton pour descendre */
-    background-position: -19px 50%;
+.icone:hover {
+    transform: rotate(30deg);
 }
 
-::-webkit-scrollbar-button:horizontal {
-    /* Boutons horizontaux */
-    width: 26px;
-    background: yellow 50% 1px no-repeat, #bfb6a3 0 0 no-repeat;
+
+/* MEDIA QUERIES */
+
+@media (max-width: 999px) {
+    body {
+        overflow-y: auto;
+    }
+    body,
+    body>main {
+        flex-flow: column nowrap;
+        width: 100vw;
+    }
+    body>main>section:nth-child(1),
+    body>main>section:nth-child(2) {
+        width: 100vw;
+    }
+    body>aside,
+    .notices,
+    .collection,
+    .notices>header,
+    .notices>section {
+        width: 100vw;
+    }
+    body>aside>a {
+        width: 100vw;
+        text-align: center;
+    }
+    .notices>section>article {
+        width: 100vw;
+    }
 }
 
-::-webkit-scrollbar-button:horizontal:increment {
-    /* Bouton pour aller à droite */
-    background-position: 50% -19px;
+
+/* NOTICE */
+
+.notice {
+    visibility: hidden;
+    position: absolute;
+    left: 100vw;
+    width: 80vw;
+    height: calc(100vh - 60px);
+    top: 60px;
+    background-color: rgba(255, 255, 255, .9);
+    transition: all .3s ease;
+}
+
+.vu {
+    left: 20vw;
+    visibility: visible;
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1400px) {
+    .notices>section>article {
+        width: 33.33%;
+    }
+}
+
+@media screen and (min-width: 1401px) and (max-width: 1700px) {
+    .notices>section>article {
+        width: 25%;
+    }
+}
+
+@media screen and (min-width: 1701px) {
+    .notices>section>article {
+        width: 20%;
+    }
+}
+
+
+/* width */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: yellow;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: yellowgreen;
 }
