--- a/App/css/main.css
+++ b/App/css/main.css
@@ -36,6 +36,24 @@ body>main>section {
     display: flex;
 }
 
+body>main>header {
+    height: 60px;
+    display: flex;
+    flex-flow: row nowrap;
+    text-align: center;
+    width: 100vw;
+    margin-top: -60px;
+    transition: margin .3s ease;
+}
+
+body>main>header a {
+    width: calc(100vw - 40px);
+}
+
+body>main>header img {
+    width: 200px;
+}
+
 h1,
 h2,
 h3,
@@ -72,8 +90,9 @@ body>aside {
 
 body>main {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: column nowrap;
     width: 80vw;
+    transition: width .3s ease;
 }
 
 body>main>section {
@@ -181,7 +200,7 @@ input {
 
 .notices {
     flex-flow: column nowrap;
-    width: 100%;
+    width: 80vw;
 }
 
 .notices>header {
@@ -463,13 +482,16 @@ audio.media {
     transition: all .3s ease;
 }
 
+.ouvert {
+    width: 60vw;
+}
+
 .sequence {
     display: flex;
     flex-flow: row nowrap;
     width: 80%;
     margin: auto;
     padding: 2px 10px;
-    /* justify-content: space-between; */
 }
 
 .sequence>span:nth-child(1),
@@ -482,33 +504,81 @@ audio.media {
 }
 
 
+/* MENU BURGER */
+
+.burger {
+    display: none;
+    cursor: pointer;
+    border: none;
+    width: 30px;
+    height: 38px;
+    margin: 12px;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+    width: 30px;
+    height: 3px;
+    background-color: rgb(146, 17, 92);
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.croix {}
+
+.croix .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
+    transform: rotate(-45deg) translate(-6px, 6px);
+    background-color: yellowgreen;
+}
+
+.croix .bar2 {
+    opacity: 0;
+}
+
+.croix .bar3 {
+    -webkit-transform: rotate(45deg) translate(-6px, -6px);
+    transform: rotate(45deg) translate(-6px, -6px);
+    background-color: yellowgreen;
+}
+
+
 /* MEDIA QUERIES */
 
-@media (max-width: 999px) {
+@media (max-width: 960px) {
     body {
         overflow-y: auto;
     }
     body>main {
-        flex-flow: column nowrap;
         width: 100vw;
+    }
+    body>aside {
+        width: 40vw;
+    }
+    body>main>header {
+        margin-top: 0px;
     }
     body>main>section:nth-child(1),
     body>main>section:nth-child(2) {
         width: 100vw;
     }
-    body>aside,
+    .notice {
+        width: 100vw;
+    }
     .notices,
-    .collection,
     .notices>header,
     .notices>section {
         width: 100vw;
     }
-    body>aside>a {
-        width: 100vw;
-        text-align: center;
-    }
     .notices>section>article {
-        width: 100vw;
+        width: 50%;
+    }
+    .vu {
+        left: 0;
+    }
+    .burger {
+        display: inline-block;
     }
 }
 
