--- a/App/css/main.css
+++ b/App/css/main.css
@@ -119,9 +119,12 @@ em {
 body>aside>section {
     justify-content: space-around;
     width: 100%;
-    height: 50vh;
+    height: 35vh;
 }
-
+aside>header{
+    display:flex;
+    flex-flow:column nowrap;
+}
 nav {
     width: 100%;
     min-height: 40vh;
@@ -160,7 +163,13 @@ aside>input {
     margin: 10px auto 40px;
     opacity: 1;
 }
-
+.na{
+    margin-left:10px;
+    display: block;
+}
+.na img{
+    float:right;
+}
 
 /* CLASSES GENERIQUES */
 
