Mise à jour pour des tests sur AWS

--- a/Site/src/app/presentation/presentation.component.html
+++ b/Site/src/app/presentation/presentation.component.html
@@ -21,6 +21,6 @@
 </section>
 <footer>
     <article>
-        <a href>Mentions légales</a>
+        <a (click)="dataServ.postAWSData()">Mentions légales</a>
     </article>
 </footer>
